# wechat-group-stock-dashboard

./: .env.example  .gitignore  PRIVACY.md  README.md  README.zh-CN.md  build_speaker_stock_dashboard.py  build_stock_mentions.py  chat_export.py  codex_stock_analysis.py  fetch_google_finance_snapshot.py  fetch_stock_trends.py  pyproject.toml  start.sh  update_page_history.py
codex-skill/wechat-group-stock-dashboard/: SKILL.md
codex-skill/wechat-group-stock-dashboard/agents/: openai.yaml
examples/: sample_chat.md
scripts/: backfill_group_stock_dashboard.sh  daily_group_stock_dashboard.sh  deploy_public_pages.sh  install_and_start.sh  one_click_deploy.sh
templates/: speaker_dashboard.html  speaker_dashboard.js  stock_mentions.html  stock_mentions.js
tests/: test_codex_analysis.py
